@@ -164,6 +164,8 @@ using rcpt.envrules.
 The following list of environment variables can be modified using envrules
 
 .IR QREGEX ,
+.IR QLOCAL ,
+.IR QREMOTE ,
 .IR SPAMFILTER ,
 .IR LOGFILTER ,
 .IR SPAMFILTERARGS ,
