@@ -68,6 +68,8 @@ Release 3.0.6-1.1 Start 25/10/2023 End XX/XX/XXXX
 - 05/12/2023
 43. rd-remote.c: Added remote mail redirector
 44. envrules.c, mail_acl.c: Fix for invalid rules
+44. spawn-filter.c: setup qmail-local, qmail-remote arguments after envrules
+   to allow envrules to set QLOCAL, QREMOTE
 
 * Tue Oct 17 2023 18:34:04 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.5-1.1%{?dist}
 Release 3.0.5-1.1 Start 11/09/2023 End 17/10/2023
